# Admissions_Dashboard

./: .gitignore  CLAUDE.md  README.md  admissions-data-viz v2.html  dashboard.css  dashboard.html  dashboard.js  index.html  leads.csv  process_ccs.py  summary.csv  summary_2022.csv  summary_2023.csv  summary_2024.csv  summary_2025.csv  summary_2026.csv  summary_index.json
projection/: .gitignore  CLAUDE.md  Cohort Fill Pipeline Spec.md  README.md  calibration_log.md  pyproject.toml  weekly.ps1
projection/baselines/: accumulation_curves.csv  ate_conversion_rates.csv  confidence_tier_rates.csv  enrollment_distribution.csv  position_averages.csv  program_start_dates_2026.csv
projection/completed/: cohort_actuals.csv  cohort_actuals_by_rep.csv
projection/dashboard/: index.html
projection/scripts/: calibrate.py  export_dashboard_data.py  high_water.py  import_historical_actuals.py  ingest.py  pending_calibrations.py  projections.py  recognition.py  record_actuals.py  rep_health.py  run_pipeline.py  utils.py  velocity.py  views.py
projection/snapshots/: 2026-05-12_management.md  2026-05-12_reps.csv  2026-05-12_snapshot.csv  2026-05-15_management.md  2026-05-15_reps.csv  2026-05-15_snapshot.csv  2026-05-22_management.md  2026-05-22_reps.csv  2026-05-22_snapshot.csv  2026-05-26_management.md  2026-05-26_reps.csv  2026-05-26_snapshot.csv  2026-06-01_management.md  2026-06-01_reps.csv  2026-06-01_snapshot.csv  2026-06-08_management.md  2026-06-08_reps.csv  2026-06-08_snapshot.csv  2026-06-12_management.md  2026-06-12_reps.csv  2026-06-12_snapshot.csv  2026-06-18_reps.csv  (+15 more)
(+158 files in other folders)
